Windows QPA: Fix build with mingw64/Win32 threading

For this build, cxx11_future is not available and thus
QThread::create() as introduced by
ed114b728d9dc5265333c593254d9f6527464a60 does not work.
Revert back to implementing a QThread.

Pick-to: 5.15
Fixes: QTBUG-86575
Task-number: QTBUG-85676
Change-Id: I86a91f6bcdfc88804b35bf617362d92f37e51dea
Reviewed-by: Kai Koehne <kai.koehne@qt.io>